[project]
name = "python-ulid-django"
version = "1.0.0"
description = "ULID (Universally Unique Lexicographically Sortable Identifier) support for Django."
authors = [
    { name = "Xdynix", email = "Lizard.rar@gmail.com" },
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
lint = [
    "pre-commit>=3.7.1",
]

[tool.pdm.scripts.post_install]
cmd = ["pre-commit", "install"]
help = "install pre-commit hooks"

[tool.pdm.scripts.lint]
cmd = ["pre-commit", "run", "--all-files"]
env = { PYTHONUTF8 = "1" }
help = "execute linters"
